Changelog
=========

2.2.3 (unreleased)
------------------

- Nothing changed yet.


2.2.2 (2014-10-23)
------------------

- Update template markup to match Barcelonetta
  [albertcasado, sneridagh]

- Remove deprecated imports.
  [tomgross]


2.2.1 (2014-04-13)
------------------

- Remove DL's from portalMessage templates.
  https://github.com/plone/Products.CMFPlone/issues/153
  [khink]


2.2.0 (2014-03-01)
------------------

- Don't use spamProtect script in event_view; it doesn't do much.
  [davisagli]

- Use the new member search form as the layout for the Members folder.
  [davisagli]

- Moved Products.CMFFormController dependency
  from Products.CMFPlone to Products.ATContentTypes (PLIP #13770)
  [ale-rt]

- Moved portal_factory and portal_metadata from Products.CMFPlone
  to Products.ATContentTypes. (PLIP #13770)
  [ale-rt]

- Remove test_discussion test which tests the old discussion (pre Plone 4.1)
  tool.
  [timo]

- Add 'content' profile which adds demo/test content.
  This used to be in CMFPlone and is still used by PloneTestCase
  in Plone 5.
  [davisagli]

- Update ICONMAP (.gif to .png).
  [mathias.leimgruber]

- Move content type profile definitions from Products.CMFPlone into here.
  (Merge of PLIP 12344)
  [davisagli et al.]

- Remove the presentation mode setting from documents.
  If the feature is still desired, use the plone.app.s5slideshow
  addon.
  [davisagli]

- Removed backwards compatibility stub Products.ATReferenceBrowserWidget
  [tomgross]

- Don't throw a traceback if atct_topic_view is called on a non topic.
  Redirect to the default view of context instead
  [tomgross]

- Move ATContent types views in there instead of CMFPlone
  [encolpe]

2.1.12 (2013-03-05)
-------------------

- Fix missing references on copy of (old-style) Collection path
  criterion and relatedItems on stock content using the schema
  flag keepReferencesOnCopy.  Refs: https://dev.plone.org/ticket/9919
  [seanupton]


2.1.11 (2013-01-13)
-------------------
