@@ -2,8 +2,7 @@
 <metadata>
   <version>1</version>
   <dependencies>
-    <dependency>profile-Products.Archetypes:Archetypes</dependency>
-    <dependency>profile-Products.CMFFormController:CMFFormController</dependency>
+    <dependency>profile-Products.ATContentTypes:base</dependency>
     <dependency>profile-plone.app.collection:default</dependency>
     <dependency>profile-plone.app.imaging:default</dependency>
     <dependency>profile-plone.app.widgets:default</dependency>
