@@ -4,7 +4,9 @@ Changelog
 2.2.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add profile 'base' to allow addons to depend on ATContentTypes in Plone 5
+  without uninstalling the dexterity default-types.
+  [pbauer]
 
 
 2.2.2 (2014-10-23)
